# hawkes

./: .gitignore  CMakeLists.txt  CPack.txt  DESCRIPTION  NAMESPACE  README.md  appveyor.yml  configure  configure.ac
CMakeModules/: Version.cmake  build_boost_compute.cmake  version.h.in
R/: RcppExports.R  Untitled.R  data.R  hpHawkes.R  hph.R  log_lik_and_grad.R
data/: dcData.Rdata
man/: Potential.Rd  Simulation_Potential.Rd  computeLoglikelihood.Rd  createEngine.Rd  dcData.Rd  engineInitial.Rd  getGradient.Rd  getLogLikelihood.Rd  getProbsSelfExcite.Rd  getRandomRatesGradient.Rd  getRandomRatesHessian.Rd  hmcsampler.Rd  hpHawkes.Rd  mhsampler.Rd  probability_se.Rd  sampler.Rd  setBackgroundRates.Rd  setLocDistsData.Rd  setParameters.Rd  setRandomRates.Rd  setTimDiffsData.Rd  setTimesData.Rd  simulation_sampler.Rd  test.Rd  timeTest.Rd  updateLocations.Rd
src/: AbstractHawkes.hpp  CDF.h  Distance.hpp  Makevars.in  Makevars.win  MemoryManagement.hpp  NewHawkes.hpp  RcppExports.cpp  benchmark.cpp  factory.cpp  flags.h  hpHawkes.cpp  test.cpp
src/backend/nosimd/: CMakeLists.txt
src/backend/opencl/: CMakeLists.txt  OpenCLHawkes.hpp  OpenCLMemoryManagement.hpp  OpenCLMultiDimensionalScaling.hpp  Reducer.hpp  instantiate.cpp
src/jni/: README  dr_inference_hawkes_NativeHPHSingleton.cpp  dr_inference_hawkes_NativeHPHSingleton.h
src/libm/: e_exp.c  math.h  math_private.h
tests/: testthat.R
tests/testthat/: testLikGrad.R
